# finance-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  start.sh  workspace.yaml
apps/: gold_mainline_contract.py  gold_runtime_orchestration.py  premarket.py
configs/: database.yaml  llm.yaml  phases.json  schedules.yaml  sources.yaml
dagster_finance/: __init__.py  definitions.py
database/: market_identity.py
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_BACKEND_PIPELINE.md  03_FRONTEND_PAGES.md  04_DATA_MODEL_AND_STORAGE.md  05_AGENT_ARCHITECTURE.md  06_AGENT_LOOP_FALLBACK.md  06_REPORT_SYSTEM.md  07_SOURCE_TRACE_AND_RUN.md  08_BACKEND_ROADMAP.md  09_FRONTEND_ROADMAP.md  10_API_MAP.md  11_PAGE_RESPONSIBILITY_MATRIX.md  12_RISKS_AND_TODO.md  13_NEWS_DATA_PIPELINE.md  AGENT_RUNTIME_SPEC.md  DOCUMENT_INDEX.md  README.md  TOOL_REGISTRY.md  TRACE_SCHEMA.md  feishu_publish_manifest.v2.json  upgrade-plan.md
scripts/: backfill_artifact_registry.py  backfill_jin10.py  backfill_jin10_kline.py  backfill_macro.py  backfill_macro_history_to_db.py  backfill_market_candles.py  backfill_xauusd_kline.py  benchmark_jin10_vlm.py  bootstrap_analysis_state.py  build_analysis_snapshot.py  codex-danger.sh  codex-live.sh  dev-dispatch.sh  dev-tmux.sh  dispatch-visible.sh  distill_jin10_research_knowledge.py  download_cme_pdf.py  enhance_options_report.py  fetch_jin10_report.py  find_jin10_daily_article_ids.py  fix_agent_scoping.py  fix_app_scoping.py  generate_frontend_contracts.py  generate_jin10_visual_report.py  generate_jin10_web_flash_sample.py  (+51 more)
(+1409 files in other folders)
